fix: added z-index for calendar (#22)

--- a/src/components/Datepicker/DateTimePicker.css
+++ b/src/components/Datepicker/DateTimePicker.css
@@ -98,7 +98,7 @@
 }
 
 .react-datepicker-popper {
-  z-index: 1;
+  z-index: 2;
 }
 .react-datepicker-popper[data-placement^=bottom] {
   padding-top: 10px;
